# book-v2-audio

./: .gitignore  LICENSE  Makefile  README.ja.md  README.md  README.ru.md  README.zh.md  architecture.md  main.py  pyproject.toml
plans/: architecture_plan.md  comment_parallelization_plan.md  readme_fixes.md  tts_piper_progress_plan.md
resources/: prompts.toml
src/config/: __init__.py  defaults.toml  key_manager.py  settings.py
src/core/: __init__.py  audio_assembler.py  audio_bitrate.py  checkpoint_manager.py  comment_manager.py  fb2_parser.py  pipeline.py  sentence_splitter.py  tts_base.py  tts_edge.py  tts_manager.py  tts_piper.py  tts_silero.py  tts_supertonic.py
src/ui/: __init__.py  app.py  progress_window.py  wizard.py
src/ui/components/: __init__.py  prompt_editor.py  voice_selector.py
src/ui/pages/: __init__.py  page_api.py  page_comments.py  page_create.py  page_file.py  page_language.py  page_launch.py  page_logo.py  page_scope.py
src/utils/: __init__.py  exceptions.py  logger.py  scope_display.py
