[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-v2-audio"
version = "0.2.0"
description = "FB2 → audiobook with AI-powered Porfiry commentary"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
    {name = "Audiobook Generator Team"},
]

keywords = [
    "audiobook",
    "tts",
    "fb2",
    "piper-tts",
    "edge-tts",
    "porfiry",
    "text-to-speech",
    "audiobook-generator",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "customtkinter>=5.2.0",
    "defusedxml>=0.7.1",
    "httpx>=0.27.0",
    "edge-tts>=6.1.0",
    "keyring>=25.0.0",
    "tomli-w>=1.0.0",
    "spacy>=3.7.0",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
supertonic = [
    "supertonic>=1.0.0",
]
silero = [
    "silero-tts>=0.0.5",
    "scipy>=1.10.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pyinstaller>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.png", "*.ico"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
